manifest-templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app: ecom-app
spec:
  rules:
    - host: bkd-bash.CLUSTER_ID.k8s.civo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: my-service
              servicePort: 3000
